# gnome-shell-extension-yawl

./: .gitignore  Makefile.am  README.md  autogen.sh  changeversion  configure.ac  include.mk  install-extension  new-extension  pos
aa/: configure.ac  include.mk
aa/po/: POTFILES.in  de.po  ru.po  uk.po
aa/src/: Makefile.am  changelog.txt  dbfinaa.js  dbfinactivities.js  dbfinconsts.js  extension.js  metadata.json.in  org.gnome.shell.extensions.dbfin.aa.gschema.xml.in  prefs.js  readme.txt  stylesheet.css  stylesheet_custom.css  stylesheet_custom2.css  template.js
lib/: dbfinanimation.js  dbfinanimationequations.js  dbfinarrayhash.js  dbfinclicked.js  dbfindebug.js  dbfinpopupmenu.js  dbfinsettings.js  dbfinsignals.js  dbfinsliceractor.js  dbfinslicericon.js  dbfinslicerlabel.js  dbfinstyle.js  dbfintimeout.js  dbfinutils.js  dbfinutilsprefs.js  license.txt
po/: POTFILES.in  de.po  ru.po
src/: Makefile.am  changelog.txt  dbfinanimation.js  dbfinanimationequations.js  dbfinappbutton.js  dbfinarrayhash.js  dbfinclicked.js  dbfinclickmeter.js  dbfinconsts.js  dbfindebug.js  dbfindebugview.js  dbfinmenubuilder.js  dbfinmovecenter.js  dbfinpanelbuttontoggle.js  dbfinpanelenhancements.js  dbfinpreview.js  dbfinsettings.js  dbfinsignals.js  dbfinsliceractor.js  dbfinslicericon.js  dbfinslicerlabel.js  dbfinstyle.js  dbfintemplate.js  dbfintracker.js  dbfintrackerapp.js  dbfintrackerwindow.js  dbfinutils.js  dbfinutilsprefs.js  dbfinwindowthumbnail.js  dbfinyawl.js  dbfinyawlpanel.js  extension.js  license.txt  metadata.json.in  org.gnome.shell.extensions.dbfin.yawl.gschema.xml.in  prefs.js  readme.txt  stylesheet.css
src/images/: Makefile.am
template/: Makefile.am  configure.ac  include.mk
template/po/: POTFILES.in
template/src/: Makefile.am  dbfinconsts.js  dbfinmain.js  extension.js  metadata.json.in  org.gnome.shell.extensions.dbfin.main.gschema.xml.in  prefs.js  readme.txt  stylesheet.css  template.js
yawl/: Makefile.am  autogen.sh  configure.ac  include.mk
yawl/po/: LINGUAS  POTFILES.in  de.po  ru.po  uk.po
yawl/src/: Makefile.am  changelog.txt  convenience2.js  dbfinactivities.js  dbfinanimation.js  dbfinappbutton.js  dbfinarrayhash.js  dbfinclicked.js  dbfinclickmeter.js  dbfinconsts.js  dbfindebugview.js  dbfinmenubuilder.js  dbfinmovecenter.js  dbfinpanelbuttontoggle.js  dbfinpanelenhancements.js  dbfinpreview.js  dbfinsettings.js  dbfintracker.js  dbfintrackerapp.js  dbfintrackerwindow.js  dbfinutils.js  dbfinutilsprefs.js  dbfinwindowthumbnail.js  dbfinyawl.js  dbfinyawlpanel.js  extension.js  license.txt  metadata.json.in  org.gnome.shell.extensions.dbfin.yawl.gschema.xml.in  prefs.js  readme.txt  stylesheet.css
