include ../../include.mk

images = \
	mouse-left.png \
	mouse-right.png \
	mouse-middle.png \
	icon.png \
	panel.png \
	animation.png \
	mouse.png \
	tuning.png \
	mouse-clicks-double.gif \
	mouse-clicks-single.gif \
	empty_16.png \
	window.png

imagedir = $(extensiondir)/images
dist_image_DATA = $(images)

