include ../../include.mk

images = \
	mouse-left.png \
	mouse-right.png \
	mouse-middle.png \
	icon.png \
	panel.png \
	animation.png \
	mouse.png \
	tuning.png \
	mouse-clicks-double.gif \
	mouse-clicks-single.gif \
	empty_16.png \
	thumbnail.png \
	animation_thumbnail.png \
	panel_thumbnail.png \
	debug.png \
	yawl.png \
	gplv3.png

imagedir = $(extensiondir)/images
dist_image_DATA = $(images)

